[main]: correct extra horizontal scrolling

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ width: auto;}
 
 .slider {
   width: 100%;
-  height: 99%;
+  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: bottom;
